@@ -1,3 +1,9 @@
+2005-08-09  Francois Dumont  <dums@stlport...>
+
+	* src/fstream.cpp: Final fix of basic_filebuf::open method. Now when open
+	from a Win32 handle the file will be concidered as in binary access with no
+	append action.
+
 2005-08-08  Francois Dumont  <dums@stlport...>
 
 	* src/fstream.cpp: Fix annoying 64 warning and basic_filebuf::open method
